<resources>
    <string name="app_name">Sabine\'s List</string>

    <string name="contentDescription_search">search</string>
    <string name="contentDescription_clearSearchQuery">clear search query</string>
    <string name="contentDescription_exitSearch">exit search</string>
    <string name="contentDescription_addUserList">add list</string>
    <string name="contentDescription_addListItem">add item</string>
    <string name="contentDescription_back">back</string>
    <string name="contentDescription_moreActions">more actions</string>

    <string name="dialogTitle_newUserList">New List</string>
    <string name="dialogTitle_editUserList">Edit List</string>
    <string name="dialogTitle_newItem">New Item</string>
    <string name="dialogTitle_editItem">Edit Item</string>

    <string name="hint_listName">List name</string>
    <string name="hint_itemName">Item name</string>

    <string name="error_listNameMustNotBeEmpty">List name cannot be empty</string>
    <string name="error_itemNameMustNotBeEmpty">Item name cannot be empty</string>

    <string name="create">create</string>
    <string name="createAnother">create another</string>

    <string name="bottomNavigation_all">All</string>
    <string name="bottomNavigation_unchecked">Unchecked</string>
    <string name="bottomNavigation_checked">Checked</string>
    <string name="bottomNavigation_contentDescription_all">All items</string>
    <string name="bottomNavigation_contentDescription_unchecked">Unchecked items</string>
    <string name="bottomNavigation_contentDescription_checked">Checked items</string>

    <string name="edit">edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="itemAdded">Item added</string>
    <string name="listAdded">List added</string>

    <string name="searchHint_lists">Search lists</string>
    <string name="searchHint_items">Search items</string>
    <string name="search_noResults">No results</string>

    <string name="homeScreen_title">My Lists</string>
    <string name="homeScreen_emptyView">You do not have any lists</string>
    <string name="homeScreen_deleteConfirmation">Are you sure you want to delete this list?</string>

    <string name="listItemsScreen_emptyList">This list is empty</string>
    <string name="listItemsScreen_noItemsMatchingFilter">No items match your filter</string>
    <string name="listItemsScreen_clearFilter">Show all items</string>
    <string name="listItemsScreen_deleteConfirmation">Are you sure you want to delete this item?</string>
    <string name="listItemsScreen_uncheck">uncheck</string>
    <string name="listItemsScreen_uncheckAllConfirmation">
        Are you sure you want to uncheck all the items in this list?
    </string>
    <string name="listItemsScreen_addListItem">ADD ITEM</string>

    <string name="menuItem_darkTheme">Dark theme</string>
    <string name="menuItem_lightTheme">Light theme</string>
    <string name="menuItem_uncheckAll">Uncheck all</string>
    <string name="menuItem_share">Share</string>
    <string name="menuItem_search">Search</string>
    <string name="menuItem_preferences">Preferences</string>

    <string name="preferenceScreen_sectionTitle_theme">Theme</string>
    <string name="preferenceScreen_sectionTitle_credits">Credits</string>

    <string name="preferenceScreen_title">Preferences</string>

    <string name="preferenceScreen_theme_light">Light</string>
    <string name="preferenceScreen_theme_dark">Dark</string>
    <string name="preferenceScreen_theme_system">System</string>

    <string name="credits_me">App created by Or Dvir</string>
    <string name="credits_appIcon">App icon designed by Uniconlabs from flaticon.</string>

    <string name="contentDescription_checkbox_checked">Checked: %s</string>
    <string name="contentDescription_checkbox_unchecked">Unchecked: %s</string>
    <string name="shareListItemsPreText_s_s">I would like to share my %s list with you:\n%s</string>
</resources>